# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
page_analyzer/: __init__.py  app.py  checks.py  db_connection.py  db_operations.py  parser.py  url_checks.py  validators_url.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
