[project]
name = "hexlet-code"
version = "0.1.0"
description = "The project is designed to check the accessibility of web-pages and to obtain brief information about the page."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "validators>=0.18",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
]

